--- a/index.html.html
+++ b/index.html.html
@@ -1,55 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quran Explorer</title>
+    <title>Quran Website</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; }
-        .container { max-width: 800px; margin: auto; padding: 20px; }
-        input { width: 100%; padding: 10px; margin: 10px 0; }
-        .verse { margin: 15px 0; padding: 10px; border: 1px solid #ddd; }
+        .container { max-width: 800px; margin: auto; }
+        input { width: 80%; padding: 10px; margin: 10px 0; }
+        .ayah { margin: 20px 0; font-size: 20px; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Quran Explorer</h1>
-        <input type="text" id="search" placeholder="Search for a verse..." onkeyup="searchVerse()">
-        <div id="verses"></div>
+        <h1>القرآن الكريم</h1>
+        <input type="text" id="search" placeholder="آیت تلاش کریں..." onkeyup="searchAyah()">
+        <div id="results"></div>
     </div>
 
     <script>
-        const quranVerses = [
-            { arabic: "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ", translation: "In the name of Allah, the Most Gracious, the Most Merciful" },
-            { arabic: "الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ", translation: "Praise be to Allah, Lord of all the worlds" },
+        const quran = [
+            { arabic: "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ", translation: "اللہ کے نام سے جو بڑا مہربان نہایت رحم والا ہے" },
+            { arabic: "الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ", translation: "سب تعریفیں اللہ کے لیے ہیں جو تمام جہانوں کا رب ہے" }
         ];
 
-        function displayVerses() {
-            const verseContainer = document.getElementById('verses');
-            verseContainer.innerHTML = '';
-            quranVerses.forEach(verse => {
-                let verseDiv = document.createElement('div');
-                verseDiv.classList.add('verse');
-                verseDiv.innerHTML = `<strong>${verse.arabic}</strong><br>${verse.translation}`;
-                verseContainer.appendChild(verseDiv);
+        function searchAyah() {
+            let input = document.getElementById('search').value.toLowerCase();
+            let resultsDiv = document.getElementById('results');
+            resultsDiv.innerHTML = '';
+
+            quran.forEach(ayah => {
+                if (ayah.arabic.includes(input) || ayah.translation.includes(input)) {
+                    resultsDiv.innerHTML += `<div class='ayah'><strong>${ayah.arabic}</strong><br>${ayah.translation}</div>`;
+                }
             });
         }
-
-        function searchVerse() {
-            let query = document.getElementById('search').value.toLowerCase();
-            let verseContainer = document.getElementById('verses');
-            verseContainer.innerHTML = '';
-            quranVerses.filter(verse => 
-                verse.arabic.includes(query) || verse.translation.toLowerCase().includes(query)
-            ).forEach(verse => {
-                let verseDiv = document.createElement('div');
-                verseDiv.classList.add('verse');
-                verseDiv.innerHTML = `<strong>${verse.arabic}</strong><br>${verse.translation}`;
-                verseContainer.appendChild(verseDiv);
-            });
-        }
-
-        displayVerses();
     </script>
 </body>
 </html>
