--- a/index.html.html
+++ b/index.html.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quran Website</title><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,7 +18,116 @@
         <option value="2">2 - Al Baqara</option>
         <option value="3">3 - Aal e Imran</option>
         <option value="4">4 - An Nisa</option>
-        <!-- Add all 114 Surahs here -->
+        <option value="5">5 - Al Maida</option>
+        <option value="6">6 - Al Anaam</option>
+        <option value="7">7 - Al Araf</option>
+        <option value="8">8 - Al Anfal</option>
+        <option value="9">9 - At Tawbah</option>
+        <option value="10">10 - Yunus</option>
+        <option value="11">11 - Hud</option>
+        <option value="12">12 - Yusuf</option>
+        <option value="13">13 - Ar Rad</option>
+        <option value="14">14 - Ibrahim</option>
+        <option value="15">15 - Al Hijr</option>
+        <option value="16">16 - An Nahl</option>
+        <option value="17">17 - Al Isra</option>
+        <option value="18">18 - Al Kahf</option>
+        <option value="19">19 - Maryam</option>
+        <option value="20">20 - Taha</option>
+        <option value="21">21 - Al Anbiya</option>
+        <option value="22">22 - Al Hajj</option>
+        <option value="23">23 - Al Muminun</option>
+        <option value="24">24 - An Nur</option>
+        <option value="25">25 - Al Furqan</option>
+        <option value="26">26 - Ash Shuara</option>
+        <option value="27">27 - An Naml</option>
+        <option value="28">28 - Al Qasas</option>
+        <option value="29">29 - Al Ankabut</option>
+        <option value="30">30 - Ar Rum</option>
+        <option value="31">31 - Luqman</option>
+        <option value="32">32 - As Sajda</option>
+        <option value="33">33 - Al Ahzab</option>
+        <option value="34">34 - Saba</option>
+        <option value="35">35 - Fatir</option>
+        <option value="36">36 - Ya Sin</option>
+        <option value="37">37 - As Saffat</option>
+        <option value="38">38 - Sad</option>
+        <option value="39">39 - Az Zumar</option>
+        <option value="40">40 - Ghafir</option>
+        <option value="41">41 - Fussilat</option>
+        <option value="42">42 - Ash Shura</option>
+        <option value="43">43 - Az Zukhruf</option>
+        <option value="44">44 - Ad Dukhan</option>
+        <option value="45">45 - Al Jathiya</option>
+        <option value="46">46 - Al Ahqaf</option>
+        <option value="47">47 - Muhammad</option>
+        <option value="48">48 - Al Fath</option>
+        <option value="49">49 - Al Hujurat</option>
+        <option value="50">50 - Qaf</option>
+        <option value="51">51 - Adh Dhariyat</option>
+        <option value="52">52 - At Tur</option>
+        <option value="53">53 - An Najm</option>
+        <option value="54">54 - Al Qamar</option>
+        <option value="55">55 - Ar Rahman</option>
+        <option value="56">56 - Al Waqia</option>
+        <option value="57">57 - Al Hadid</option>
+        <option value="58">58 - Al Mujadila</option>
+        <option value="59">59 - Al Hashr</option>
+        <option value="60">60 - Al Mumtahina</option>
+        <option value="61">61 - As Saff</option>
+        <option value="62">62 - Al Jumuah</option>
+        <option value="63">63 - Al Munafiqun</option>
+        <option value="64">64 - At Taghabun</option>
+        <option value="65">65 - At Talaq</option>
+        <option value="66">66 - At Tahrim</option>
+        <option value="67">67 - Al Mulk</option>
+        <option value="68">68 - Al Qalam</option>
+        <option value="69">69 - Al Haqqa</option>
+        <option value="70">70 - Al Maarij</option>
+        <option value="71">71 - Nuh</option>
+        <option value="72">72 - Al Jinn</option>
+        <option value="73">73 - Al Muzzammil</option>
+        <option value="74">74 - Al Muddathir</option>
+        <option value="75">75 - Al Qiyama</option>
+        <option value="76">76 - Al Insan</option>
+        <option value="77">77 - Al Mursalat</option>
+        <option value="78">78 - An Naba</option>
+        <option value="79">79 - An Naziat</option>
+        <option value="80">80 - Abasa</option>
+        <option value="81">81 - At Takwir</option>
+        <option value="82">82 - Al Infitar</option>
+        <option value="83">83 - Al Mutaffifin</option>
+        <option value="84">84 - Al Inshiqaq</option>
+        <option value="85">85 - Al Buruj</option>
+        <option value="86">86 - At Tariq</option>
+        <option value="87">87 - Al Ala</option>
+        <option value="88">88 - Al Ghashiya</option>
+        <option value="89">89 - Al Fajr</option>
+        <option value="90">90 - Al Balad</option>
+        <option value="91">91 - Ash Shams</option>
+        <option value="92">92 - Al Layl</option>
+        <option value="93">93 - Ad Duha</option>
+        <option value="94">94 - Ash Sharh</option>
+        <option value="95">95 - At Tin</option>
+        <option value="96">96 - Al Alaq</option>
+        <option value="97">97 - Al Qadr</option>
+        <option value="98">98 - Al Bayyinah</option>
+        <option value="99">99 - Az Zalzalah</option>
+        <option value="100">100 - Al Adiyat</option>
+        <option value="101">101 - Al Qariah</option>
+        <option value="102">102 - At Takathur</option>
+        <option value="103">103 - Al Asr</option>
+        <option value="104">104 - Al Humazah</option>
+        <option value="105">105 - Al Fil</option>
+        <option value="106">106 - Quraysh</option>
+        <option value="107">107 - Al Maun</option>
+        <option value="108">108 - Al Kawthar</option>
+        <option value="109">109 - Al Kafirun</option>
+        <option value="110">110 - An Nasr</option>
+        <option value="111">111 - Al Masad</option>
+        <option value="112">112 - Al Ikhlas</option>
+        <option value="113">113 - Al Falaq</option>
+        <option value="114">114 - An Nas</option>
     </select>
     
     <label for="ayah">Ayah Number:</label>
@@ -36,46 +140,11 @@
             let surah = document.getElementById("surah").value;
             let ayah = document.getElementById("ayah").value;
             if (ayah) {
-                let url = `https://quran.com/${surah}/${ayah}`; // Change to your Quran data source
+                let url = `https://quran.com/${surah}/${ayah}`;
                 window.location.href = url;
             } else {
                 alert("Please enter an Ayah number.");
             }
-        }
-    </script>
-</body>
-</html>
-
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        .container { max-width: 800px; margin: auto; }
-        input { width: 80%; padding: 10px; margin: 10px 0; }
-        .ayah { margin: 20px 0; font-size: 20px; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>القرآن الكريم</h1>
-        <input type="text" id="search" placeholder="آیت تلاش کریں..." onkeyup="searchAyah()">
-        <div id="results"></div>
-    </div>
-
-    <script>
-        const quran = [
-            { arabic: "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ", translation: "اللہ کے نام سے جو بڑا مہربان نہایت رحم والا ہے" },
-            { arabic: "الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ", translation: "سب تعریفیں اللہ کے لیے ہیں جو تمام جہانوں کا رب ہے" }
-        ];
-
-        function searchAyah() {
-            let input = document.getElementById('search').value.toLowerCase();
-            let resultsDiv = document.getElementById('results');
-            resultsDiv.innerHTML = '';
-
-            quran.forEach(ayah => {
-                if (ayah.arabic.includes(input) || ayah.translation.includes(input)) {
-                    resultsDiv.innerHTML += `<div class='ayah'><strong>${ayah.arabic}</strong><br>${ayah.translation}</div>`;
-                }
-            });
         }
     </script>
 </body>
